<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202732"
    tools:context=".Registro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageform"
                android:layout_width="157dp"
                android:layout_height="88dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="52dp"
                app:srcCompat="@drawable/appform"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/txtNumTrab"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="56dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_icon_baseline_bagde"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/n_mero_de_trabajador"
                android:inputType="number"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/txtApellidos"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_icon_baseline_person"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/apellidos"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_icon_baseline_person"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <Spinner
                android:id="@+id/lstArea"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="32dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <Spinner
                android:id="@+id/lstColegio"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginStart="68dp"
                android:layout_marginTop="32dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/cmdGuardar"
                android:layout_width="219dp"
                android:layout_height="48dp"
                android:layout_marginStart="95dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/button_rounded"
                android:onClick="GuardarDatos"
                android:text="@string/guardar"
                android:textColor="#FFFFFF"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/cmdBorrar"
                android:layout_width="219dp"
                android:layout_height="48dp"
                android:layout_marginTop="36dp"
                android:layout_marginStart="95dp"
                android:background="@drawable/button_rounded_border"
                android:onClick="BorrarDatos"
                android:text="@string/borrar"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>